<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="50dp"
            android:text="@string/help"/>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="70dp"
                android:text="@string/welcome"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="50dp"
                android:drawableLeft="@drawable/user"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="20"
                android:textSize="14sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="14sp" />
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_centerVertical="true"
                android:backgroundTint="#4CAF50"
                android:shadowColor="#00999696"
                android:shadowDx="3"
                android:shadowDy="3"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtValidateCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:linksClickable="true"
                    android:text="@string/validateCode"
                    android:textColor="#FFC107"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:longClickable="true"
                    android:text="@string/register"
                    android:textColor="#FFC107"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/apay"/>

            <ImageView
                android:id="@+id/imageWechat"
                android:layout_marginLeft="30dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/wechat"/>
            <ImageView
                android:id="@+id/imageQQ"
                android:layout_marginLeft="30dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/qq"/>

            <ImageView
                android:id="@+id/imageWeibo"
                android:layout_marginLeft="30dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/weibo" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="50dp"
            android:textColorLink="#FFC107"
            android:textSize="10sp" />

    </LinearLayout>
</RelativeLayout>