<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120px"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/payBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="50px"
            android:src="@drawable/back"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:text=""/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:text="@string/quan"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="@string/noquan"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:text="@string/total_price"/>
            <TextView
                android:id="@+id/pay_price"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400px"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:text="@string/table"/>
            <Spinner
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/tables"/>
        </LinearLayout>

        <Button
            android:id="@+id/payBtn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_centerVertical="true"
            android:backgroundTint="#4CAF50"
            android:shadowColor="#00999696"
            android:shadowDx="3"
            android:shadowDy="3"
            android:text="@string/pay"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>