<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_shop_bg"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_shop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="81dp"
        android:transitionName="transitionShopImg"
        app:placeholderImageScaleType="centerCrop"
        app:roundedCornerRadius="2dp"/>

    <RelativeLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="104dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="81dp">

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_shop_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_shop_name"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_shop_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_shop_summary"
            android:layout_marginTop="4dp"
            android:background="@color/yellow"
            android:maxLines="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/tag1"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_shop_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_shop_summary"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/tv_shop_type"
            android:background="@color/dodgerblue"
            android:maxLines="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/tag2"
            android:textColor="@color/white"
            android:textSize="11sp"/>
    </RelativeLayout>
</FrameLayout>