<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:text="@string/order_deal"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:background="@color/white"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="订单编号"
                android:gravity="center"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="餐桌编号"
                android:gravity="center"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="菜品数量"
                android:gravity="center"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="操作"
                android:gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>
        <ListView
            android:id="@+id/order_detail_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:paddingRight="20dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/robotNotice"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/robot1"
            android:gravity="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/robotDeliver"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/robot2"
            android:gravity="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/orderFinish"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/order_finish"
            android:gravity="center"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>
